--- a/index.html
+++ b/index.html
@@ -4,20 +4,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio </title>
 </head>
 
 <body>
     <header>
+        <nav>
+            <a href="">WEB</a><a href="">STUDIO</a>
 
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+        </nav>
+        <address>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a> <a
+                href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </address>
     </header>
 
     <main>
+        <section>
+            <!--button-->
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
 
+        <section>
+            <!--Our benefits-->
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative
+                        solution.</p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and
+                        minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.</p>
+                </li>
+
+            </ul>
+        </section>
+
+        <section>
+            <!--Our team-->
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./images/img_mark.jpg" alt="Mark Guerrero-photo" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+
+                <li>
+                    <img src="./images/img_tom.jpg" alt="Tom Ford-photo" width="264" height="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/img_camila.jpg" alt="Camila Garcia-photo" width="264" height="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/img_daniel.jpg" alt="Daniel Wilson-photo" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+
+        </section>
     </main>
 
     <footer>
-        
+        <h3>WEBSTUDIO</h3>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
+
 </body>
+
 </html>
