--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href="">WEB</a><a href="">STUDIO</a>
+            <a href="./index.html">WEBSTUDIO</a>
 
             <ul>
                 <li><a href="">Studio</a></li>
@@ -19,8 +19,10 @@
             </ul>
         </nav>
         <address>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a> <a
-                href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <ul>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            </ul>
         </address>
     </header>
 
@@ -33,6 +35,7 @@
 
         <section>
             <!--Our benefits-->
+            <h2>Our benefits</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -89,7 +92,7 @@
     </main>
 
     <footer>
-        <h3>WEBSTUDIO</h3>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
